--- a/styles/shared-pages/header.css
+++ b/styles/shared-pages/header.css
@@ -186,11 +186,13 @@ li a:hover .bxl-twitter {
     align-items: center;
     margin: 1rem auto;
     position: relative;
+    width: 100%;
   }
 
   .header-icons ul {
    position: absolute;
-   left: 3.5rem;
+   left: 50%;
+  transform: translateX(-50%);
   }
 
   .nav-links a.active {
